--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #d95d39;
+  --color-secondary: #fff9f0;
+  --color-neutral: #2f2f2f;
+  --color-accent: #a63c3c;
+  --color-info: #f3d9c3;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+
+.active {
+  @apply text-primary hover:bg-accent hover:text-white;
+}
